--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,8 @@
   <script type="text/javascript" src="/js/highlightjs/languages/powershell.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
 
+  <link rel="stylesheet" href="{{ "/css/override.css" | relative_url }}">
+
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
 </head>
