--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,12 +14,13 @@ layout: default
       {% assign author = page.author | default: site.author %}
       {%- if author -%}
         • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
-      {%- endif -%}</p>
+      {%- endif -%}
+    </p>
   </header>
 
-  <div class="share-links">
-    {% include sharelinks.html %}
-  </div>
+<!--  <div class="share-links">-->
+<!--    {% include sharelinks.html %}-->
+<!--  </div>-->
 
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
